# baltracker

./: .gitignore  Makefile  README.md  config.json.example  pyproject.toml
src/balance_tracker/: api_req.py  balances.py  calc_risk.py  config.py  plot_portfolio.py  tg_utils.py
sys/: baltracker  baltracker.service  install.sh
