[project]
name = 'balance-tracker'
description = ""
version = '0.0.1'
dependencies = [
  "pandas>=2.2.3",
  "numpy>=2.1.1",
  "requests>=2.32.3",
  "tabulate>=0.9.0",
  "matplotlib>=3.9.2",
  "seaborn>=0.13.2",
  "rich>=13.3.1",
]

[project.optional-dependencies]
dev = ["isort", "ruff"]


[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project.scripts]
track = "balance_tracker.balances:main"
plot = "balance_tracker.plot_portfolio:main"
risk = "balance_tracker.calc_risk:main"


[tool.mypy]
ignore_missing_imports = true

[tool.ruff]
line-length = 110

[tool.isort]
profile = "black"
line_length = 110
