[project]
name = 'balance-tracker'
description = ""
version = '0.0.1'
dependencies = ["requests>=2.32.3", "rich>=13.3.1"]

[project.optional-dependencies]
dev = ["isort", "ruff"]
plot = ["pandas>=2.2.3", "matplotlib>=3.9.2"]

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project.scripts]
track = "balance_tracker.balances:main"
plot = "balance_tracker.plot_portfolio:main"

[tool.ruff]
line-length = 110

[tool.isort]
profile = "black"
line_length = 110
