[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = 'balance-tracker'
description = ""
version = '0.0.1'
dependencies = ["requests>=2.32.3"]

[project.optional-dependencies]
all = ["isort", "ruff", "pandas>=2.2.3", "matplotlib>=3.9.2"]
dev = ["isort", "ruff"]
plot = ["pandas>=2.2.3", "matplotlib>=3.9.2"]

[project.scripts]
track = "balance_tracker.balances:main"
plot = "balance_tracker.plot_portfolio:main"

[tool.ruff]
line-length = 110

[tool.isort]
profile = "black"
line_length = 110
